constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sAllowedRepo
metadata:
  name: image-pull-trusted-rep
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
      - apiGroups: ["apps"]
        kinds: ["Deployment", "StatefulSet", "ReplicaSet", "DaemonSet"]
  parameters:
    repos:
    - argoproj
    - quay.io
    - redis:5.0.3
    - busybox
    - docker.io
    - loicsharma
    - buildpack-deps:curl
    - redis:3.2
    - gcr.io
    - redis:5.0
    - rabbitmq:3.7
    - grafana
    - prom
    - 602401143452.dkr.ecr.eu-west-1.amazonaws.com
    - alpine:3.6
    - docker.elastic.co
    - docker:dind
    - gitlab
    - herbrandson
    - k8s.gcr.io
    - kubernetesui
    - 563178737752.dkr.ecr.eu-west-1.amazonaws.com
